Prevent sidebar from collapsing while navigating

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   font-family: 'Roboto', 'Source Han Sans JP Regular', 'KFhimaji';
 }
+
 html,
 body {
   background-color: #f4f6f6;
@@ -9,6 +10,7 @@ body {
   margin: 0;
   overflow: hidden;
 }
+
 #container {
   /* MAIN CONTAINER */
   background-position: center;
@@ -23,6 +25,7 @@ body {
   right: 0;
   margin: auto;
 }
+
 #details {
   /* WEATHER WIDGET */
   border-radius: 3px;
@@ -33,9 +36,11 @@ body {
   top: 20px;
   text-align: center;
 }
+
 #weather {
   line-height: 17px;
 }
+
 #description {
   color: #fff;
   font-family: 'Helvetica Rounded';
@@ -43,6 +48,7 @@ body {
   display: inline-block;
   text-transform: lowercase;
 }
+
 #temp_curr {
   color: #fff;
   font-family: 'Helvetica Rounded';
@@ -50,6 +56,7 @@ body {
   display: inline-block;
   padding-left: 2px;
 }
+
 .form {
   /* SEARCH BAR */
   position: absolute;
@@ -59,6 +66,7 @@ body {
   margin: auto;
   text-align: right;
 }
+
 #image-button {
   background-image: url('icons/submit.png');
   background-repeat: no-repeat;
@@ -68,6 +76,7 @@ body {
   width: 10px;
   margin-left: -26px;
 }
+
 input {
   background: #453744;
   border: none;
@@ -81,10 +90,12 @@ input {
   margin-right: 20px;
   transition: 0.3s ease-in-out;
 }
+
 input:focus {
   width: 300px;
   transition: 0.3s ease-in-out;
 }
+
 #message {
   color: #fff;
   font-size: 56pt;
@@ -102,31 +113,43 @@ input:focus {
   margin: auto;
   text-align: center;
 }
+
+#nav {
+  display: flex;
+  height: 100vh;
+}
+
 .sidebar {
   /* SIDEBAR */
-  background: #1e272b;
   width: 20%;
   height: 100%;
-  margin-left: -20%;
+  background: #1e272b;
   transition: all 0.3s ease-in-out;
-  z-index: 99;
+  transform: translateX(calc(-120%));
 }
-.sidebar:hover {
-  margin-left: 0%;
-}
+
 #border {
   /* SIDEBAR BORDER */
+  z-index: 99;
+  display: flex;
+  flex-direction: column;
   height: 100%;
   width: 50px;
-  position: absolute;
-  margin-left: 20%;
+  padding-top: 20%;
   opacity: 0.9;
 }
+
+#border:hover + .sidebar,
+.sidebar:hover {
+  transform: translateX(0);
+}
+
 .box {
   /* SIDEBAR BOX LINK */
-  padding-right: 30px;
   padding-top: 45%;
+  padding-right: 30px;
 }
+
 .box a {
   color: #fff;
   font-family: 'Helvetica Rounded';
@@ -137,41 +160,49 @@ input:focus {
   display: block;
   transition: all 0.3s ease-in-out;
 }
+
 .box a:hover {
   color: inherit;
 }
+
 .box h1 {
   color: #fff;
   font-family: 'Helvetica Rounded', 'KFhimaji';
   text-align: right;
 }
+
 .button {
   /* SIDEBAR BUTTONS */
   background: transparent;
   border: none;
   color: #000;
   font-family: 'Helvetica Rounded';
-  position: absolute;
-  margin-left: 20%;
-  margin-top: 18%;
-  width: 50px;
 }
+
+.button:hover {
+  cursor: pointer;
+}
+
 .button.active {
   background: #1e272b;
   color: #fff;
 }
+
 #first-btn {
   padding: 17px 15px;
   top: 10px;
 }
+
 #second-btn {
   padding: 17px 14px;
   top: 62px;
 }
+
 #third-btn {
   padding: 17px 14px;
   top: 114px;
 }
+
 #click-btn:active .sidebar {
   margin-left: 0;
 }
